crates/ika-upgrade-compatibility-transactional-tests/tests/snapshots/tests__public_fun_param_alpha_rename.snap
---
source: crates/ika-upgrade-compatibility-transactional-tests/tests/tests.rs
expression: results
---
====
Compatibility { check_datatype_layout: true, check_private_entry_linking: false, disallowed_new_abilities: [Copy, Drop, Store, Key, ] }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_datatype_layout: true, check_private_entry_linking: true, disallowed_new_abilities: [] }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_datatype_layout: true, check_private_entry_linking: true, disallowed_new_abilities: [Key, ] }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
====
====
Compatibility { check_datatype_layout: false, check_private_entry_linking: false, disallowed_new_abilities: [] }
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
========
Equal
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
====
====
Subset
0000000000000000000000000000000000000000000000000000000000000000::base_module:
	base->upgrade: true
	upgrade->base: true
====
